fix: fix bugs with content overflow

--- a/source/sass/blocks/demo.scss
+++ b/source/sass/blocks/demo.scss
@@ -61,7 +61,7 @@
 
   @media #{$desktop} {
     align-self: end;
-    margin-bottom: 68px;
+    margin-bottom: 28px;
   }
 }
 
@@ -73,7 +73,7 @@
   }
 
   @media #{$desktop} {
-    margin-top: 0;
+    margin-top: 40px;
     margin-bottom: 10px;
   }
 }
