--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -179,4 +179,8 @@
     width: auto;
     margin: 29px 0 0 87px;
   }
+
+  @media #{$desktop} {
+    max-width: 442px;
+  }
 }
