--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -19,6 +19,10 @@
   display: grid;
   grid-template-columns: auto auto;
   justify-content: space-between;
+
+  @media #{$desktop} {
+    grid-template-columns: auto 50%;
+  }
 }
 
 .page-header__logo {
@@ -134,6 +138,10 @@
 
   @media #{$tablet-desktop} {
     padding: 8px 0 0px 36px;
+  }
+
+  @media #{$desktop} {
+    padding-left: 12px;
   }
 }
 
