--- a/source/sass/blocks/price-list.scss
+++ b/source/sass/blocks/price-list.scss
@@ -29,6 +29,7 @@
 
 .price-list__item {
   display: grid;
+  align-content: start;
 
   @media #{$mobile} {
     position: relative;
@@ -108,7 +109,7 @@
 
 .price-list__image-wrapper {
   @media #{$mobile} {
-    grid-row: 1 / 5;
+    grid-row: 1 / 6;
   }
 
   padding: 0 10px;
